sites/all/themes/alhx/css/pages.css
/* ... */
.header h1 {
  font: normal 1em/1.8em "Monaco", "lucida console", "courier", monospace;
  margin: 0;
}

.header img {
  width: 100%;
  max-width: 900px;
  display: block;
  margin: 1em auto 0 auto;
}

/* @end */

/* @group Main Navigation */

.mainNav > div {
  padding: 2em 2em 2em 4em;
}

.mainNav {
/*  font: normal .8em/2em monaco, "Monaco", futura;*/
}

.mainNav ul {
  padding: 0;
  margin: 0;
  float: right;
}

.mainNav li {
  list-style-type: none;
  text-align: right;
}

.mainNav a:link, .mainNav a:visited {
  display: block;
  text-decoration: none;
  font-size: 1em;
  color: #285993;
}

.mainNav li:last-child a {
  border-right: 0;
}

.mainNav a:hover, .mainNav a:active {
  color: #993333;
  text-decoration: underline;
}

.mainNav li a.active {
  text-decoration: underline;
}

/* @end */

/* @group Product Filters */

/* @group Root Product Menu */

.gridItem {
  width: 50%;
  float: left;
  text-align: center;
}

.gridItem .productTypeItems {
  border: 0;
}

.gridItem .productTypeItems img {
  width: 200px;
  float: none;
}

.gridItem .productTypeCaption {
  padding: 0;
  margin: 0;
  width: 100%;
}

/* @end */

/* @group Breadcrumbs Menu */

.block-crumbs {
  font-size: .75em;
/*  border-top: 1px solid #b2c9d8;
  border-bottom: 1px solid #b2c9d8;*/
  padding: .25em 0;
  margin: 1em 0;
  overflow: auto;
}

.block-crumbs a, .block-crumbs a:after {
  border: 1px solid #b2c9d8;
  background-color: #e1edf4;
  text-decoration: none;
  transition: all .1s linear;
}

.block-crumbs a:hover, .block-crumbs a:hover:after{
  background-color: #f4eed7;
  color: #9d8e54;
}

.block-crumbs a {
  border-right: 0;
  margin: 0 2em 0 0;
  padding: .25em 0.5em .25em 1em;
  float: left;
  position: relative;
  border-radius: .4em 0 0 .4em; 
}

.block-crumbs ol > li:last-child {
  border-radius: .4em;
  padding: .25em 1em;
  background-color: #eee;
  border: 1px solid #ddd;
  float: left;
}

.block-crumbs a:after {
  content: "";
  height: 1.9em;
  margin-top: -1em;
  position: absolute;
  right: -1em;
  top: 50%;
  width: 1.9em;
  z-index: -1;
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  -o-transform: rotate(45deg); 
  transform: rotate(45deg);
  border-radius: .45em .25em .45em .45em;
}

/* @end */

.field {
  overflow: auto;
}

.field-group-format .field {
  overflow: visible;
}

.field > .field-items {
  float: right;
}

.views-exposed-form, .attribute-widgets {
  font-size: .75em;
  line-height: 1.5em;
}

.views-exposed-form .clearfix:after {
  display: none;
}

.views-exposed-widgets div {
  margin: 0;
  padding: 0;
}

.views-exposed-widgets, .attribute-widgets {
  display: table;
  border: 1px solid #b2c9d8;
  border-radius: .5em;
  margin: 0 0 3em 0 !important;
  overflow: hidden;
}

.views-exposed-widgets > div {
  display: table-row;
  padding: 0;
  margin: 0;
}

.views-exposed-widgets > div > div {
  width: 25%;
  padding: 0em !important;
  display: table-cell !important;
  border-right: 1px solid #b2c9d8;
/*  box-sizing: border-box;*/
  margin: 0;
  background-color: #fff;
  float: none !important;
  border-bottom: 1px solid #b2c9d8;
}

#edit-submit {
  display: none;
}

.attribute-widgets .form-item {
  margin: 0;
  padding: 0;
  border-bottom: 1px solid #b2c9d8;
}

.attribute-widgets .form-item:last-child {
  border-bottom: 0;
}

.attribute-widgets select {
  padding-left: 1em;
  border-left: 0 !important;
}

.views-exposed-widget > label, .attribute-widgets label {
  font-weight: normal !important;
/*  text-decoration: underline;*/
  background-color: #eee;
  padding: .5em 1em;
  border-bottom: 1px solid #b2c9d8;
}

.views-exposed-widget > div {
  padding: .5em 1em 1em 1em;
}

.views-exposed-widget:nth-child(4n+4) {
  border-right: none !important;
}

.views-exposed-widgets > div:last-child > div {
  border-bottom: none !important;
}

.views-exposed-form .views-exposed-widget .form-submit {
  font: normal 1em/1.5em "Monaco", "lucida console", "courier", monospace;
  margin: 0em !important;
  background-color: transparent;
  border: 0;
  width: 100%;
  height: 100%;
  color: inherit;
}

.views-submit-button {
  color: #285993 !important;
  background-color: #e1edf4 !important;
  transition: all .1s linear;
}

.views-submit-button:hover {
  color: #9d8e54 !important;
  background-color: #f4eed7 !important;
}

/* @end */

/* @group Filtered Product List */

/*.sticky-ul {
    height: 100%;
    overflow: auto;
}*/
.headerFixed h2.stickyHeaders {
  margin: 1em 0 0 0 !important;
}


.headerFixed + .productItem {
  padding-top: 6em !important;
}

.headerFixed {
  position: fixed;
  top: 0;
  background-color: #fff;
  width: 50%;
  box-shadow: 0 8px 12px -10px rgba(0,0,0,.75);
}

.view-content {
/*  padding-top: 1em;*/
  position: relative;
}

.view-content > h3, .stickyHeaders {
    font: bold 1.8em/1.5em 'Archivo Narrow', Impact, Helvetica, Arial, sans-serif !important;
    padding: .25em 0;
    border-top: 3px solid #285993;
    border-bottom: 3px solid #993333;
}

h2.stickyHeaders {
  margin-bottom: 0;
}

.view-content .productItem {
  overflow: auto;
}

.productItem .itemNav {
  float: right;
  display: block;
}

.productItem .itemNav a {
  display: block;
  color: #285993;
  text-decoration: none;
  border: 1px solid #b2c9d8;
  list-style-type: none;
  margin: .9em .25em;
  padding: .2em 1em;
  font-size: .8em;
  border-radius: .5em;
/*  background-color: #e1edf4;*/
}

.productItem .itemNav a:hover {
  background-color: #f4eed7;
  color: #9d8e54;
}

.view-content {
  font: normal .75em/1.5em "Monaco", "lucida console", "courier", monospace;
}

.productItem {
/*  width: 100%;*/
  margin-left: 100px;
  border-bottom: 1px solid #b2c9d8;
}

.productItem h2 {
  width: 4em;
}

.productItem h2, .productItem h3 {
  font: normal 1em/1.5em "Monaco", "lucida console", "courier", monospace !important;
  padding: 1em 0.5em;
  margin: 0;
  display: inline-block;
}

.productItem a:link, .productItem a:active {
  text-decoration: none;
}
/* ... */

